kubernetes/base/decisioning/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: decisioning
  namespace: decisioning
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: decisioning
